# clang-format-example

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  main.cpp
beast/: session.cpp  session.h
cmake/: ClangFormat.cmake
hello/: hello.cpp  hello.h
